# DSC-MVSNet

./: README.md  requirements.txt
configs/: dtu.yaml
dscmvsnet/: config.py  dataset.py  model.py  networks.py  solver.py  test.py
dscmvsnet/functions/: ._functions.py  functions.py
dscmvsnet/nn/: ._conv.py  conv.py
dscmvsnet/utils/: ._checkpoint.py  ._eval_file_logger.py  ._logger.py  ._metric_logger.py  ._preprocess.py  ._tensorboard_logger.py  ._torch_utils.py  checkpoint.py  eval_file_logger.py  feature_fetcher.py  file_logger.py  io.py  logger.py  tensorboard_logger.py
fusibile/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
outputs/: pretrained.pth
tools/: ._depthfusion.py  ._rename_ply.py  depthfusion.py  rename_ply.py
